# retrynote

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  PROJECT_DESCRIPTION.md  PROMPT.md  README.md  deploy.sh  docker-compose.yml  mobile-files-qa.mjs  package-lock.json  preview-thinking-phases.html  pricing-fix.md  start_local_dev.sh  take-screenshots.mjs
backend/: Dockerfile  alembic.ini  init_dev_db.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_gemini.py
backend/app/: config.py  database.py  main.py  rate_limit.py  tier_config.py
backend/app/api/: admin.py  auth.py  billing.py  dashboard.py  diagram.py  files.py  guest.py  objections.py  public.py  quiz.py  retry.py  saved_prompts.py  search.py  study.py  wrong_notes.py
backend/app/middleware/: auth.py  guest_rate_limit.py  rate_limit_pro.py  rate_limit_upload.py  turnstile.py
backend/migrations/: env.py
backend/scripts/: dump_study_items.py  dump_study_items_gemini.py  test_study_items.py
backend/tests/: conftest.py  test_admin.py  test_ai_client.py  test_auth.py  test_auth_middleware.py  test_auth_utils.py  test_billing_policy.py  test_celery_tasks.py  test_config.py  test_dashboard.py  test_database.py  test_diagram_service.py  test_e2e.py  test_email_utils.py  test_files.py  test_guest_cleanup.py  test_guest_conversion.py  test_guest_session.py  test_health.py  test_models.py  test_normalize.py  test_objections.py  test_prompts.py  test_public_quiz.py  test_quiz.py  test_quiz_service.py  test_rate_limit.py  test_regression.py  test_retry.py  test_schema_normalizers.py  test_schemas_validation.py  test_search.py  test_study.py  test_workers.py  test_wrong_notes.py
(+306 files in other folders)
